--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
   background-color: lightblue;
   overflow: hidden;
 }
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
 
 #container {
   position: absolute;
@@ -17,7 +23,7 @@ body {
 
 .blossom {
   position: absolute;
-  min-width: 20px;
+  /*min-width: 20px;*/
 }
 
 /* 1st Blossom */
